force-app/main/default/objects/PreliminaryApplicationRef/PreliminaryApplicationRef.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>