force-app/main/default/objects/PreliminaryApplicationRef/fields/Application_denial_or_license_revocation__c.field-meta.xml
<CustomField>
    <fullName>Application_denial_or_license_revocation__c</fullName>
    <label>Application denial or license revocation</label>
    <type>TextArea</type>
</CustomField>