force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Abused_Neglected_Child_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Abused_Neglected_Child_Description__c</fullName>
    <label>Abused/Neglected Child Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>