force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Accreditation_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Accreditation_Begin_Date__c</fullName>
    <label>Accreditation Begin Date</label>
    <type>Date</type>
</CustomField>