force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Accreditation_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Accreditation_Expiration_Date__c</fullName>
    <label>Accreditation Expiration Date</label>
    <type>Date</type>
</CustomField>