force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Accreditation_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Accreditation_Type__c</fullName>
    <label>Accreditation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accreditation Disproportionate Share Enhancement Agreement</fullName>
            </value>
            <value>
                <fullName>Accreditation Rate Differential Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>