force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Accrediting_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Accrediting_Organisation_Name__c</fullName>
    <label>Accrediting Organization Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NAEYC – National Association for the Education of Young Children</fullName>
            </value>
            <value>
                <fullName>NAFCC – National Association for Family Child Care</fullName>
            </value>
            <value>
                <fullName>NECPA – National Early Childhood Program Accreditation</fullName>
            </value>
            <value>
                <fullName>CARF International – Commission on Accreditation of Rehabilitation Facilities</fullName>
            </value>
            <value>
                <fullName>COA – Council on Accreditation</fullName>
            </value>
            <value>
                <fullName>COGNIA – (formally Advanced Education, Inc)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>