force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Acknowledgement_Check__c.field-meta.xml
<CustomField>
    <fullName>CC_Acknowledgement_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application all acknowledgements check</description>
    <label>Acknowledgement Check</label>
    <type>Checkbox</type>
</CustomField>