force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Acknowledgement_Date__c</fullName>
    <label>Acknowledgement Date</label>
    <type>Date</type>
</CustomField>