force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Active_Application_Step__c.field-meta.xml
<CustomField>
    <fullName>CC_Active_Application_Step__c</fullName>
    <label>Active Application Step</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>