force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Address_To_Change__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_To_Change__c</fullName>
    <description>used to capture the choice for address update</description>
    <label>Address To Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Home&apos;s Physical Address</fullName>
            </value>
            <value>
                <fullName>Update Home&apos;s Mailing Address</fullName>
            </value>
            <value>
                <fullName>Update Child Care Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>