force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Agree_app_not_complete_in_6_mnths__c.field-meta.xml
<CustomField>
    <fullName>CC_Agree_app_not_complete_in_6_mnths__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree app not complete in 6 mnths</label>
    <type>Checkbox</type>
</CustomField>