force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Agree_Printed_signature_is_my_sign__c.field-meta.xml
<CustomField>
    <fullName>CC_Agree_Printed_signature_is_my_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree Printed signature is my signature</label>
    <type>Checkbox</type>
</CustomField>