force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Alcohol_Narcotics_Drugs_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Alcohol_Narcotics_Drugs_Description__c</fullName>
    <label>Alcohol, Narcotics, Drugs Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>