force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Amendment_Type__c</fullName>
    <label>Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change in Name</fullName>
            </value>
            <value>
                <fullName>Change in Address</fullName>
            </value>
            <value>
                <fullName>Change in Rate Enhancement</fullName>
            </value>
            <value>
                <fullName>Change in Staff Members</fullName>
            </value>
            <value>
                <fullName>Change of Facility Details</fullName>
            </value>
            <value>
                <fullName>Arm-Rule Waiver</fullName>
            </value>
            <value>
                <fullName>Overlap Care</fullName>
            </value>
            <value>
                <fullName>Family Association</fullName>
            </value>
            <value>
                <fullName>Change of Address/ Change of Facility Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>