force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Any_children_Home_Schooled__c.field-meta.xml
<CustomField>
    <fullName>CC_Any_children_Home_Schooled__c</fullName>
    <label>Any children Home Schooled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>