force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Any_children_Home_Schooled_Desc__c.field-meta.xml
<CustomField>
    <fullName>CC_Any_children_Home_Schooled_Desc__c</fullName>
    <label>Any children Home Schooled Description</label>
    <type>TextArea</type>
</CustomField>