force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Any_member_Abused_Neglected_Child__c.field-meta.xml
<CustomField>
    <fullName>CC_Any_member_Abused_Neglected_Child__c</fullName>
    <label>Any member Abused/Neglected Child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>