force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Any_Member_Arrested_or_Charged__c.field-meta.xml
<CustomField>
    <fullName>CC_Any_Member_Arrested_or_Charged__c</fullName>
    <label>Any Member Arrested or Charged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>