force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Any_member_Dealing_with_Child_Protect__c.field-meta.xml
<CustomField>
    <fullName>CC_Any_member_Dealing_with_Child_Protect__c</fullName>
    <label>Any member Dealing with Child Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>