force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Application_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Application_Closed_Date__c</fullName>
    <label>Application Closed Date</label>
    <type>Date</type>
</CustomField>