force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Additional Info Required</fullName>
                <isActive>false</isActive>
                <label>Additional Info Required</label>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
                <isActive>false</isActive>
                <label>Additional Information Required</label>
            </value>
            <value>
                <fullName>Additional Information Submitted</fullName>
                <isActive>false</isActive>
                <label>Additional Information Submitted</label>
            </value>
            <value>
                <fullName>Applicant Action Required</fullName>
                <isActive>false</isActive>
                <label>Applicant Action Required</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
                <isActive>false</isActive>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Authorized to Provider</fullName>
                <isActive>false</isActive>
                <label>Authorized to Provider</label>
            </value>
            <value>
                <fullName>Case Closed</fullName>
                <isActive>false</isActive>
                <label>Case Closed</label>
            </value>
            <value>
                <fullName>Certified</fullName>
                <isActive>false</isActive>
                <label>Certified</label>
            </value>
            <value>
                <fullName>Certified - Authorized to Provider</fullName>
                <isActive>false</isActive>
                <label>Certified - Authorized to Provider</label>
            </value>
            <value>
                <fullName>Certified - Pending Authorization</fullName>
                <isActive>false</isActive>
                <label>Certified - Pending Authorization</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Contracted</fullName>
                <isActive>false</isActive>
                <label>Contracted</label>
            </value>
            <value>
                <fullName>Expired Application</fullName>
                <isActive>false</isActive>
                <label>Expired Application</label>
            </value>
            <value>
                <fullName>Inspection requested</fullName>
                <isActive>false</isActive>
                <label>Inspection Requested</label>
            </value>
            <value>
                <fullName>Need more information</fullName>
                <isActive>false</isActive>
                <label>Need more information</label>
            </value>
            <value>
                <fullName>Pending Authorization</fullName>
                <isActive>false</isActive>
                <label>Pending Authorization</label>
            </value>
            <value>
                <fullName>Pending Recertification</fullName>
                <isActive>false</isActive>
                <label>Pending Recertification</label>
            </value>
            <value>
                <fullName>Pending Renewal</fullName>
                <isActive>false</isActive>
                <label>Pending Renewal</label>
            </value>
            <value>
                <fullName>Pending e-verification or VNTD</fullName>
                <isActive>false</isActive>
                <label>Pending e-verification or VNTD</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Request For Information</fullName>
                <isActive>false</isActive>
                <label>Request For Information</label>
            </value>
            <value>
                <fullName>Request for Case Closure</fullName>
                <isActive>false</isActive>
                <label>Request for Case Closure</label>
            </value>
            <value>
                <fullName>Return for Revision</fullName>
                <isActive>false</isActive>
                <label>Return for Revision</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>