force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Application_Submitted_Age__c.field-meta.xml
<CustomField>
    <fullName>CC_Application_Submitted_Age__c</fullName>
    <formula>TEXT(TODAY() - DATEVALUE( CC_Submitted_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Submitted Age</label>
    <type>Text</type>
</CustomField>