force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Application_Type</valueSetName>
    </valueSet>
</CustomField>