force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Apply_for_Rate_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>CC_Apply_for_Rate_Enhancement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply for Rate Enhancement</label>
    <type>Checkbox</type>
</CustomField>