force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Approval_for_additional_space__c.field-meta.xml
<CustomField>
    <fullName>CC_Approval_for_additional_space__c</fullName>
    <label>Approval for additional space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>