force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Approved_Facility_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Approved_Facility_Date__c</fullName>
    <label>Approved Facility Date</label>
    <type>Date</type>
</CustomField>