force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Approved_Foster_care_Provider_Desc__c.field-meta.xml
<CustomField>
    <fullName>CC_Approved_Foster_care_Provider_Desc__c</fullName>
    <label>Approved Foster care Provider Descrption</label>
    <type>TextArea</type>
</CustomField>