force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_electrical_outlets_covered__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_electrical_outlets_covered__c</fullName>
    <inlineHelpText>Are electrical outlets covered?</inlineHelpText>
    <label>Are electrical outlets covered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>