force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_firearms_locked_and_inaccessible__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_firearms_locked_and_inaccessible__c</fullName>
    <inlineHelpText>Are firearms locked and inaccessible?</inlineHelpText>
    <label>Are firearms locked and inaccessible?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>