force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_hazards_out_of_reach_for_children__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_hazards_out_of_reach_for_children__c</fullName>
    <inlineHelpText>Are hazards inaccessible to children, inside and out?</inlineHelpText>
    <label>Are hazards out of reach for children?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>