force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_heaters_ventilated_and_screened__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_heaters_ventilated_and_screened__c</fullName>
    <inlineHelpText>Are heaters ventilated and screened?</inlineHelpText>
    <label>Are heaters ventilated and screened?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>