force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_meals_and_snacks_nutritious__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_meals_and_snacks_nutritious__c</fullName>
    <inlineHelpText>Are meals and snacks nutritious?</inlineHelpText>
    <label>Are meals and snacks nutritious?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>