force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_poisons_out_of_children_s_reach__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_poisons_out_of_children_s_reach__c</fullName>
    <inlineHelpText>Are poisonous substances out of reach of children?</inlineHelpText>
    <label>Are poisons out of children&apos;s reach?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>