force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_the_children_exposed_to_smoking__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_the_children_exposed_to_smoking__c</fullName>
    <inlineHelpText>Are the children exposed to smoking?</inlineHelpText>
    <label>Are the children exposed to smoking?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>