force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Are_there_any_staff_changes__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_there_any_staff_changes__c</fullName>
    <label>Are there any staff changes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>