force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Associate_family_for_care__c.field-meta.xml
<CustomField>
    <fullName>CC_Associate_family_for_care__c</fullName>
    <inlineHelpText>Would You Like to associate a family that you would be Providing care for to your application?</inlineHelpText>
    <label>Associate family for care?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>I choose to do it later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>