force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Business_License__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Preliminary Application References</relationshipLabel>
    <relationshipName>Preliminary_Application_References</relationshipName>
    <type>Lookup</type>
</CustomField>