force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Business_operate_by_self_or_house_mem__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_operate_by_self_or_house_mem__c</fullName>
    <label>Business operated by self or house membr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>