force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Camp_Permit_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Camp_Permit_Issue_Date__c</fullName>
    <label>Camp Permit Issue Date</label>
    <type>Date</type>
</CustomField>