force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Changes_in_Square_Footage_Report__c.field-meta.xml
<CustomField>
    <fullName>CC_Changes_in_Square_Footage_Report__c</fullName>
    <description>Are there any changes to the Square Footage Report that needs to be reported?</description>
    <label>Changes in Square Footage Report?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>