force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Charge_less_than_the_state__c.field-meta.xml
<CustomField>
    <fullName>CC_Charge_less_than_the_state__c</fullName>
    <label>Charge less than the state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>