force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_City__c.field-meta.xml
<CustomField>
    <fullName>CC_City__c</fullName>
    <inlineHelpText>City of registered or certified child care provider</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>