force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Contact__c.field-meta.xml
<CustomField>
    <fullName>CC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Contact)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>